# youshi_bazi

./: .env.example  .gitignore  LICENSE  README.md  package.json  pyproject.toml
paipan/: ACCEPTANCE.md  README.md  pyproject.toml
paipan/paipan/: __init__.py  analyzer.py  cang_gan.py  china_dst.py  cities.py  compute.py  dayun.py  force.py  ganzhi.py  ge_ju.py  he_ke.py  li_liang.py  mechanism_tags.py  shi_shen.py  solar_time.py  types.py  xingyun.py  xingyun_data.py  yongshen.py  yongshen_data.py  zi_hour.py
paipan/scripts/: add_jieqi_zi_regression.py  probe_edge_cases.py  probe_jieqi_at_zi_hour.py  sample_day_strength.py
paipan/tests/: conftest.py  test_all_cities.py  test_analyzer.py  test_analyzer_relations.py  test_xingyun.py  test_xingyun_data.py  test_yongshen.py  test_yongshen_data.py
paipan/tests/regression/: birth_inputs.json  deep_diff.py  expand_inputs.py  generate_oracle.md  test_regression.py
paipan/tests/unit/: test_cang_gan.py  test_china_dst.py  test_cities.py  test_compute.py  test_dayun.py  test_deep_diff.py  test_force.py  test_ganzhi.py  test_ge_ju.py  test_he_ke.py  test_shi_shen.py  test_smoke.py  test_solar_time.py  test_zi_hour.py
server/: .env.example  ACCEPTANCE.md  README.md  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 0001_baseline.py  0002_user_fields_for_auth.py  0003_card_shares_and_events.py  0004_hepan_invites.py  0005_conversation_summaries.py  (+29 more)
server/app/: main.py
server/scripts/: build_classics_index.py  generate_placeholder_illustrations.py  import_card_illustration_sheet.py  import_hepan_illustration_sheet.py  probe_retrieval_failures.py  validate_cards_data.py
server/tests/: conftest.py
(+1075 files in other folders)
