[project]
name = "paipan"
version = "0.1.0"
description = "BaZi paipan engine (Python port)"
requires-python = ">=3.12"
dependencies = [
    "lunar-python>=1.3.9",
    "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["paipan"]
